# sift

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/agents/: implementer.md  reviewer.md  tester.md
.claude/commands/: bug.md  commit.md  feature.md  improve.md
backend/: config.py  database.py  main.py  models.py
backend/api/: routes_articles.py  routes_feedback.py  routes_health.py  routes_onboarding.py  routes_preferences.py  routes_sources.py
backend/extraction/: __init__.py  cache.py  extractor.py
backend/migrations/: 001_initial_schema.sql  002_fts5_indexes.sql  003_summary_language.sql  004_categories_scoring_cleanup.sql  005_fix_read_status.sql  006_extraction_tracking.sql  007_managed_tag_vocabulary.sql  008_starred_sources.sql  009_source_auth_tracking.sql  010_score_adjustment.sql  011_rescore_tracking.sql  012_tag_instrumentation.sql
backend/preferences/: __init__.py  decay.py  feedback_processor.py  profile_synthesizer.py  tag_quality.py  tag_vocabulary.py  tag_weights.py
backend/scheduler/: cleanup.py  worker.py
backend/scoring/: __init__.py  deduplicator.py  pipeline.py  pricing.py  prompts.py  score_adjustment.py  scorer.py
backend/sources/: __init__.py  base.py  hackernews.py  rss.py  webpage.py
deploy/: news-aggregator.service
docs/: feedback-loop.md  pipeline.md  product-spec.md  roadmap.md
docs/adr/: 001-curated-feed-default.md  002-rss-only-initial-source.md  003-no-dead-code.md  (+21 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: conftest.py
(+52 files in other folders)
