[project]
name = "sift"
version = "0.1.0"
description = "Sift — personal news aggregator with LLM-powered relevance scoring"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "feedparser>=6.0",
    "google-genai>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "apscheduler>=4.0.0a1",
    "pydantic-settings>=2.7",
    "aiosqlite>=0.20",
    "trafilatura>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-playwright>=0.6",
    "respx>=0.22",
    "mypy>=1.14",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "feedparser",
    "apscheduler",
    "apscheduler.schedulers.async_",
    "apscheduler.triggers.interval",
    "apscheduler.triggers.cron",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
